Minor changes to the layout. Footer is still visible correctly. Will fix this later

--- a/public/dashboard/css/sticky-footer.css
+++ b/public/dashboard/css/sticky-footer.css
@@ -14,7 +14,7 @@ body {
   width: auto;
   /* Set the fixed height of the footer here */
   height: 60px;
-  background-color: #EFEFEF;
+  /*background-color: #EFEFEF;*/
   text-align: center;
 }
 
